# dbt-gcp

./: .env  README.md  asba.bat  pyproject.toml  setup.bat  start.bat  stocks.json
analytics/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
analytics/models/example/: schema.yml
devops/: Dockerfile  cd.cloudbuild.yml  ci.cloudbuild.yml
devops/terraform/: cloud_run.tf  cloudbuild.tf  main.tf
